--- a/index.html
+++ b/index.html
@@ -1,42 +1,41 @@
 <!DOCTYPE html>
-<html lang="sv" class="h-100">
+<html lang="en" class="h-100">
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="stylesheets/style.css">
-  <title>Något är fel på internet</title>
+  <title>Your group needs food</title>
 </head>
 <body class="d-flex h-100 flex-column">
   <main class="container">
     <div class="row justify-center">
-      <a href="https://xkcd.com/386">
-        <img src="https://imgs.xkcd.com/comics/duty_calls.png " alt="Källa: https://xkcd.com/386/">
+      <a href="https://pixabay.com/sv/illustrations/apocalypse-city-slutet-av-v%C3%A4rlden-2921093/">
+        <img src="apocalypse.jpg" alt="Källa: https://pixabay.com/sv/illustrations/apocalypse-city-slutet-av-v%C3%A4rlden-2921093/">
       </a>
     </div>
     <div class="row">
-      <p>Något är fel på nätet, det är dags att ta saken i egna händer och göra någonting åt detta.</p>
-      <p>Räddningen finns såklart genom sociala medier!</p>
+      <p>2 years ago the zombie apocalypse started and your group is running out of food. We need to start sending people out in the wild to search and find food!</p>
     </div>
     <div class='row'>
       <div class="column justify-center align-center">
         <div class="w-100">
-          <h1>Din förmögenhet: <span id="money"></span> likes</h1>
+          <h1>Your amount: <span id="money"></span></h1>
         </div>
         <div class="w-100">
-          <h1>Likes per sekund: <span id="mps"></span></h1>
+          <h1>Food per second: <span id="mps"></span></h1>
         </div>
         <div class="w-100">
-          <h1>Antal följare: <span id="followers"></span></h1>
+          <h1>Amount of searchers: <span id="followers"></span></h1>
         </div>
         <div class="w-100">
-          <h1>Följare</h1>
+          <h1>Searchers</h1>
           <div id="upgradelist"></div>
         </div>
       </div>
       <div class="column justify-center align-center">
         <div>
-          <button id="click">Tjäna</button>
+          <button id="click">Find Food</button>
         </div>
       </div>
     </div>
@@ -46,8 +45,8 @@
   </main>
   <footer>
     <div class="container d-flex justify-between">
-      <p>Bild från <a href="https://xkcd.com">XKCD</a>.</p>
-      <p>Kod från <a href="https://github.com/jensnti">Jens</a>.</p>  
+      <p>Picture from <a href="https://pixabay.com/sv/illustrations/apocalypse-city-slutet-av-v%C3%A4rlden-2921093/">Pixabay</a>.</p>
+      <p>Code from <a href="https://github.com/jensnti">Jens</a>.</p>  
     </div>
   </footer>
   <script src="javascripts/clicker.js"></script>
