--- a/index.html
+++ b/index.html
@@ -9,35 +9,32 @@
 </head>
 <body class="d-flex h-100 flex-column">
   <main class="container">
-    <div class="row justify-center">
-      <a href="https://pixabay.com/sv/illustrations/apocalypse-city-slutet-av-v%C3%A4rlden-2921093/">
-        <img src="apocalypse.jpg" alt="Källa: https://pixabay.com/sv/illustrations/apocalypse-city-slutet-av-v%C3%A4rlden-2921093/">
-      </a>
-    </div>
-    <div class="row">
-      <p>2 years ago the zombie apocalypse started and your group is running out of food. We need to start sending people out in the wild to search and find food!</p>
-    </div>
-    <div class='row'>
-      <div class="column justify-center align-center">
-        <div class="w-100">
-          <h1>Your amount: <span id="money"></span></h1>
-        </div>
-        <div class="w-100">
-          <h1>Food per second: <span id="mps"></span></h1>
-        </div>
-        <div class="w-100">
-          <h1>Amount of searchers: <span id="followers"></span></h1>
-        </div>
-        <div class="w-100">
-          <h1>Searchers</h1>
-          <div id="upgradelist"></div>
-        </div>
-      </div>
-      <div class="column justify-center align-center">
-        <div>
-          <button id="click">Find Food</button>
-        </div>
-      </div>
+<div> 
+  <div class="img glass">
+  <a href="https://pixabay.com/sv/illustrations/apocalypse-city-slutet-av-v%C3%A4rlden-2921093/">
+    <img src="apocalypse.jpg" alt="Källa: https://pixabay.com/sv/illustrations/apocalypse-city-slutet-av-v%C3%A4rlden-2921093/">
+  </a>
+      <p>2 years ago the zombie apocalypse started and your group is running out of food.</p>
+      <p>We need to start sending people out in the wild to search and find food!</p>
+  </div>
+  <div class="glass">
+    <button id="click">Find Food</button>
+  </div>
+  <div class="glass">
+  <div class="text2">
+    <h1>Your amount: <span id="money"></span></h1>
+  </div>
+  <div class="text2">
+    <h1>Food per second: <span id="mps"></span></h1>
+  </div>
+  <div class="text2">
+    <h1>Amount of searchers: <span id="followers"></span></h1>
+  </div>
+  <div class="text2">
+    <h1>Searchers</h1>
+    <div id="upgradelist"></div>
+  </div>
+  </div>
     </div>
     <div class='row'>
       <div id="msgbox"></div>
