--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
   <title>Your group needs food</title>
 </head>
 <body class="d-flex h-100 flex-column">
-  <main class="container">
-<div> 
+  <main class="container" style="">
+
   <div class="img glass">
   <a href="https://pixabay.com/sv/illustrations/apocalypse-city-slutet-av-v%C3%A4rlden-2921093/">
     <img src="apocalypse.jpg" alt="Källa: https://pixabay.com/sv/illustrations/apocalypse-city-slutet-av-v%C3%A4rlden-2921093/">
@@ -19,6 +19,7 @@
   </div>
   <div class="glass">
     <button id="click">Find Food</button>
+      <div class="row" id="msgbox"></div>
   </div>
   <div class="glass">
   <div class="text2">
@@ -34,17 +35,14 @@
     <h1>Searchers</h1>
     <div id="upgradelist"></div>
   </div>
-  </div>
     </div>
-    <div class='row'>
-      <div id="msgbox"></div>
-    </div>
+
   </main>
   <footer>
     <div class="container d-flex justify-between">
       <p>Picture from <a href="https://pixabay.com/sv/illustrations/apocalypse-city-slutet-av-v%C3%A4rlden-2921093/">Pixabay</a>.</p>
       <p>Code from <a href="https://github.com/jensnti">Jens</a>.</p>  
-    </div>
+    
   </footer>
   <script src="javascripts/clicker.js"></script>
 </body>
