--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     <div class="container d-flex justify-between">
       <p>Picture from <a href="https://pixabay.com/sv/illustrations/apocalypse-city-slutet-av-v%C3%A4rlden-2921093/">Pixabay</a>.</p>
       <p>Code from <a href="https://github.com/jensnti">Jens</a>.</p>  
-    
+    </div>
   </footer>
   <script src="javascripts/clicker.js"></script>
 </body>
